--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
-    "build": "bunx --bun vite build",
+    "build": "bun run scripts/build-bun.ts",
+    "build:vite": "bunx --bun vite build",
+    "build:prod": "bun run scripts/build-bun.ts",
     "preview": "bunx --bun vite preview",
     "type-check": "bunx --bun tsc --noEmit"
   },
@@ -17,6 +19,7 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.2",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -33,4 +36,3 @@
     "bun": "1.3.2"
   }
 }
-
