--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "build:vite": "bunx --bun vite build",
     "build:prod": "bun run scripts/build-bun.ts",
     "preview": "bunx --bun vite preview",
-    "type-check": "bunx --bun tsc --noEmit"
+    "type-check": "bunx --bun tsc --noEmit",
+    "test": "bun test",
+    "test:cov": "bun test --coverage",
+    "test:watch": "bun test --watch",
+    "lint": "eslint \"{src,scripts}/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"{src,scripts}/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write \"{src,scripts}/**/*.{ts,tsx,json,css}\"",
+    "format:check": "prettier --check \"{src,scripts}/**/*.{ts,tsx,json,css}\"",
+    "check": "bun run lint && bun run type-check && bun run format:check"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -19,13 +27,29 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bun": "^1.3.2",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "globals": "^15.14.0",
+    "happy-dom": "^15.11.6",
     "postcss": "^8.4.41",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
     "vite": "^5.4.2",
