--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.3.2
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -26,34 +26,34 @@ jobs:
       - name: Type check
         run: bun run type-check
 
-      - name: Notify Vercel - type-check
-        uses: vercel/repository-dispatch/actions/status@v1
+      - name: 'notify vercel'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
         with:
-          name: 'Vercel - e-flow: type-check'
+          name: Vercel - e-flow: type-check
 
       - name: Lint
         run: bun run lint
 
-      - name: Notify Vercel - lint
-        uses: vercel/repository-dispatch/actions/status@v1
+      - name: 'notify vercel'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
         with:
-          name: 'Vercel - e-flow: lint'
+          name: Vercel - e-flow: lint
 
       - name: Format check
         run: bun run format:check
 
-      - name: Notify Vercel - format
-        uses: vercel/repository-dispatch/actions/status@v1
+      - name: 'notify vercel'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
         with:
-          name: 'Vercel - e-flow: format'
+          name: Vercel - e-flow: format
 
       - name: Run tests
         run: bun test
 
-      - name: Notify Vercel - test
-        uses: vercel/repository-dispatch/actions/status@v1
+      - name: 'notify vercel'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
         with:
-          name: 'Vercel - e-flow: test'
+          name: Vercel - e-flow: test
 
       - name: Build
         run: bun run build:vite
