--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.3.2
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -51,18 +51,10 @@ jobs:
       - name: Run tests
         run: bun test
 
-      - name: Notify Vercel - test
-        uses: vercel/repository-dispatch/actions/status@v1
+      - name: 'notify vercel'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
         with:
-          name: 'Vercel - e-flow: test'
-
-      - name: Upload coverage reports
-        if: always()
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage/lcov.info
-          fail_ci_if_error: false
-          token: ${{ secrets.CODECOV_TOKEN }}
+          name: Vercel - e-flow: test
 
       - name: Upload test results
         if: always()
